[project]
name = "myclaw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.0",
    "langchain>=1.2.13",
    "langchain-core>=1.2.20",
    "langchain-openai>=1.1.11",
    "langchain-deepseek>=1.0.0",
    "langgraph>=1.1.3",
    "flask>=3.1.3",
    "langchain-tavily>=0.2.17",
]
